Individual Json-file for RoomSettings

--- a/Web-API/appsettings.Development.json
+++ b/Web-API/appsettings.Development.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "GeneralSetting": {
-    "PeopleNumber": 50,
-    "MaxMeetingTime": 12
-  }
+  "AllowedHosts": "*"
 }
