--- a/Web-API/appsettings.json
+++ b/Web-API/appsettings.json
@@ -6,6 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
+  //"GeneralSetting": {
+  //  "PeopleNumber": 50,
+  //  "MaxMeetingTime": 12
+  //}
 }
 
 
